--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* Custom global styles */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	@apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
+	font-family: "Inter", sans-serif;
+}
+
+a {
+	@apply text-primary hover:underline;
 }
