--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,10 @@
 
 /* Custom global styles */
 body {
-	@apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
-	font-family: "Inter", sans-serif;
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
+  font-family: 'Inter', sans-serif;
 }
 
 a {
-	@apply text-primary hover:underline;
+  @apply text-primary hover:underline;
 }
